--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "spartan";
+    src: local("spartanreg"),
+     url(~assets/spartanreg.ttf) format("truetype");
+  }
+  @font-face {
+    font-family: "spartanlight";
+    src: local("spartanlight"),
+     url(~assets/spartanlight.ttf) format("truetype");
+  }
+
+  /* stylelint-disable */
+p, li {
+    font-family: "spartanlight";
+  }
+  
+  
+  h1,h2,h3,h4,h5,h6{
+    font-family: "spartan";
+  }
+  
+  .spartan {
+    font-family: "spartan"
+  }
+  .spartanlight {
+    font-family: "spartanlight"
+  }
+
+  /* stylelint-disable */
