chore: adding account info

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,21 @@
     background: '#00FFD7'
   }
 
+  .ripple {
+    background-position: center;
+    transition: background 0.8s;
+  }
+  .ripple:hover {
+    background: #9b71fc radial-gradient(circle, transparent 1%, #8557f1 1%)
+      center/15000%;
+  }
+  .ripple:active {
+    background-color: #9b71fc;
+    background-size: 100%;
+    transition: background 0s;
+  }
+
+
   .purpleBackground {
     background: '#9b71fc'
   }
